# gr-digitizers

./: CMakeLists.txt
blocklib/picoscope/: Picoscope.hpp
blocklib/picoscope5000/: enums.yml
blocklib/picoscope5000/include/gnuradio/picoscope5000/: meson.build
blocklib/picoscope5000/lib/: meson.build
blocklib/picoscope5000/picoscope5000/: picoscope5000.yml  picoscope5000_cpu.cc  picoscope5000_cpu.h
blocklib/picoscope5000/python/gnuradio/picoscope5000/: __init__.py
blocklib/picoscope5000/test/: meson.build  qa_picoscope_5000.cc  qa_picoscope_5000.h
